name:                ghcvm
version:             0.0.1
description:         Haskell to JVM compiler
license:             BSD3
license-file:        LICENSE
author:              Rahul Muttineni
maintainer:          Rahul Muttineni <rahulmutt@gmail.com>
copyright:           Copyright (c) Rahul Muttineni 2016
stability:           Experimental
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  compiler/GHCVM/Parser/Parser.y
                     compiler/GHCVM/Parser/Lexer.x

source-repository head
    type: git
    location: https://github.com/rahulmutt/ghcvm.git

library
    default-language:    Haskell2010
    default-extensions:  RecordWildCards
                       , NamedFieldPuns
                       , MultiParamTypeClasses
                       , BangPatterns
                       , TupleSections
    exposed-modules:     GHCVM.BasicTypes.Avail
                       , GHCVM.BasicTypes.BasicTypes
                       , GHCVM.BasicTypes.ConLike
                       , GHCVM.BasicTypes.DataCon
                       , GHCVM.BasicTypes.Demand
                       , GHCVM.BasicTypes.Id
                       , GHCVM.BasicTypes.IdInfo
                       , GHCVM.BasicTypes.Lexeme
                       , GHCVM.BasicTypes.Literal
                       , GHCVM.BasicTypes.MkId
                       , GHCVM.BasicTypes.Module
                       , GHCVM.BasicTypes.NameEnv
                       , GHCVM.BasicTypes.Name
                       , GHCVM.BasicTypes.NameSet
                       , GHCVM.BasicTypes.OccName
                       , GHCVM.BasicTypes.PatSyn
                       , GHCVM.BasicTypes.RdrName
                       , GHCVM.BasicTypes.SrcLoc
                       , GHCVM.BasicTypes.UniqSupply
                       , GHCVM.BasicTypes.Unique
                       , GHCVM.BasicTypes.VarEnv
                       , GHCVM.BasicTypes.Var
                       , GHCVM.BasicTypes.VarSet
                       , GHCVM.CodeGen.ArgRep
                       , GHCVM.CodeGen.Bind
                       , GHCVM.CodeGen.Closure
                       , GHCVM.CodeGen.Con
                       , GHCVM.CodeGen.Env
                       , GHCVM.CodeGen.Expr
                       , GHCVM.CodeGen.Foreign
                       , GHCVM.CodeGen.Layout
                       , GHCVM.CodeGen.LetNoEscape
                       , GHCVM.CodeGen.Main
                       , GHCVM.CodeGen.Monad
                       , GHCVM.CodeGen.Name
                       , GHCVM.CodeGen.Prim
                       , GHCVM.CodeGen.Rts
                       , GHCVM.CodeGen.Types
                       , GHCVM.CodeGen.Utils
                       , GHCVM.Core.CoreArity
                       , GHCVM.Core.CoreFVs
                       , GHCVM.Core.CoreLint
                       , GHCVM.Core.CorePrep
                       , GHCVM.Core.CoreSubst
                       , GHCVM.Core.CoreSyn
                       , GHCVM.Core.CoreTidy
                       , GHCVM.Core.CoreUnfold
                       , GHCVM.Core.CoreUtils
                       , GHCVM.Core.MkCore
                       , GHCVM.Core.PprCore
                       , GHCVM.Core.TrieMap
                       , GHCVM.DeSugar.Check
                       , GHCVM.DeSugar.Coverage
                       , GHCVM.DeSugar.DeSugar
                       , GHCVM.DeSugar.DsMonad
                       , GHCVM.DeSugar.DsArrows
                       , GHCVM.DeSugar.DsBinds
                       , GHCVM.DeSugar.DsExpr
                       , GHCVM.DeSugar.DsGRHSs
                       , GHCVM.DeSugar.DsListComp
                       , GHCVM.DeSugar.DsMeta
                       , GHCVM.DeSugar.DsForeign
                       , GHCVM.DeSugar.DsUtils
                       , GHCVM.DeSugar.Match
                       , GHCVM.DeSugar.MatchCon
                       , GHCVM.DeSugar.MatchLit
                       , GHCVM.DeSugar.StaticPtrTable
                       , GHCVM.HsSyn.HsBinds
                       , GHCVM.HsSyn.HsDecls
                       , GHCVM.HsSyn.HsDoc
                       , GHCVM.HsSyn.HsExpr
                       , GHCVM.HsSyn.HsImpExp
                       , GHCVM.HsSyn.HsLit
                       , GHCVM.HsSyn.HsPat
                       , GHCVM.HsSyn.HsSyn
                       , GHCVM.HsSyn.HsTypes
                       , GHCVM.HsSyn.HsUtils
                       , GHCVM.HsSyn.PlaceHolder
                       , GHCVM.Iface.BinIface
                       , GHCVM.Iface.BuildTyCl
                       , GHCVM.Iface.FlagChecker
                       , GHCVM.Iface.IfaceEnv
                       , GHCVM.Iface.IfaceSyn
                       , GHCVM.Iface.IfaceType
                       , GHCVM.Iface.LoadIface
                       , GHCVM.Iface.MkIface
                       , GHCVM.Iface.TcIface
                       , GHCVM.Main.Annotations
                       , GHCVM.Main.BreakArray
                       , GHCVM.Main.CmdLineParser
                       , GHCVM.Main.Constants
                       , GHCVM.Main.DriverMkDepend
                       , GHCVM.Main.DriverPhases
                       , GHCVM.Main.DriverPipeline
                       , GHCVM.Main.DynamicLoading
                       , GHCVM.Main.DynFlags
                       , GHCVM.Main.ErrUtils
                       , GHCVM.Main.Finder
                       , GHCVM.Main.GHC
                       , GHCVM.Main.GhcMake
                       , GHCVM.Main.GhcMonad
                       , GHCVM.Main.GhcPlugins
                       , GHCVM.Main.HeaderInfo
                       , GHCVM.Main.Hooks
                       , GHCVM.Main.HscMain
                       , GHCVM.Main.HscStats
                       , GHCVM.Main.HscTypes
                       , GHCVM.Main.InteractiveEval
                       , GHCVM.Main.InteractiveEvalTypes
                       , GHCVM.Main.PackageConfig
                       , GHCVM.Main.Packages
                       , GHCVM.Main.PipelineMonad
                       , GHCVM.Main.Plugins
                       , GHCVM.Main.PprTyThing
                       , GHCVM.Main.StaticFlags
                       , GHCVM.Main.SysTools
                       , GHCVM.Main.TidyPgm
                       , GHCVM.Interactive.ByteCodeAsm
                       , GHCVM.Interactive.ByteCodeGen
                       , GHCVM.Interactive.ByteCodeInstr
                       , GHCVM.Interactive.ByteCodeItbls
                       , GHCVM.Interactive.ByteCodeLink
                       , GHCVM.Interactive.Debugger
                       , GHCVM.Interactive.DebuggerUtils
                       , GHCVM.Interactive.Linker
                       , GHCVM.Interactive.ObjLink
                       , GHCVM.Interactive.RtClosureInspect
                       , GHCVM.Parser.Parse
                       , GHCVM.Parser.ApiAnnotation
                       , GHCVM.Parser.Ctype
                       , GHCVM.Parser.HaddockUtils
                       , GHCVM.Prelude.ForeignCall
                       , GHCVM.Prelude.PrelInfo
                       , GHCVM.Prelude.PrelNames
                       , GHCVM.Prelude.PrelRules
                       , GHCVM.Prelude.PrimOp
                       , GHCVM.Prelude.TysPrim
                       , GHCVM.Prelude.TysWiredIn
                       , GHCVM.Profiling.CostCentre
                       , GHCVM.Profiling.ProfInit
                       , GHCVM.Profiling.SCCfinal
                       , GHCVM.Rename.RnBinds
                       , GHCVM.Rename.RnEnv
                       , GHCVM.Rename.RnExpr
                       , GHCVM.Rename.RnHsDoc
                       , GHCVM.Rename.RnNames
                       , GHCVM.Rename.RnPat
                       , GHCVM.Rename.RnSource
                       , GHCVM.Rename.RnSplice
                       , GHCVM.Rename.RnTypes
                       , GHCVM.SimplCore.CallArity
                       , GHCVM.SimplCore.CoreMonad
                       , GHCVM.SimplCore.CSE
                       , GHCVM.SimplCore.FloatIn
                       , GHCVM.SimplCore.FloatOut
                       , GHCVM.SimplCore.LiberateCase
                       , GHCVM.SimplCore.OccurAnal
                       , GHCVM.SimplCore.SAT
                       , GHCVM.SimplCore.SetLevels
                       , GHCVM.SimplCore.SimplCore
                       , GHCVM.SimplCore.SimplEnv
                       , GHCVM.SimplCore.Simplify
                       , GHCVM.SimplCore.SimplMonad
                       , GHCVM.SimplCore.SimplUtils
                       , GHCVM.SimplStg.SimplStg
                       , GHCVM.SimplStg.StgStats
                       , GHCVM.SimplStg.UnariseStg
                       , GHCVM.Specialise.Rules
                       , GHCVM.Specialise.SpecConstr
                       , GHCVM.Specialise.Specialise
                       , GHCVM.StgSyn.CoreToStg
                       , GHCVM.StgSyn.StgLint
                       , GHCVM.StgSyn.StgSyn
                       , GHCVM.StrAnal.DmdAnal
                       , GHCVM.StrAnal.WorkWrap
                       , GHCVM.StrAnal.WwLib
                       , GHCVM.TypeCheck.FamInst
                       , GHCVM.TypeCheck.FunDeps
                       , GHCVM.TypeCheck.Inst
                       , GHCVM.TypeCheck.TcAnnotations
                       , GHCVM.TypeCheck.TcArrows
                       , GHCVM.TypeCheck.TcBinds
                       , GHCVM.TypeCheck.TcCanonical
                       , GHCVM.TypeCheck.TcClassDcl
                       , GHCVM.TypeCheck.TcDefaults
                       , GHCVM.TypeCheck.TcDeriv
                       , GHCVM.TypeCheck.TcEnv
                       , GHCVM.TypeCheck.TcErrors
                       , GHCVM.TypeCheck.TcEvidence
                       , GHCVM.TypeCheck.TcExpr
                       , GHCVM.TypeCheck.TcFlatten
                       , GHCVM.TypeCheck.TcForeign
                       , GHCVM.TypeCheck.TcGenDeriv
                       , GHCVM.TypeCheck.TcGenGenerics
                       , GHCVM.TypeCheck.TcHsSyn
                       , GHCVM.TypeCheck.TcHsType
                       , GHCVM.TypeCheck.TcInstDcls
                       , GHCVM.TypeCheck.TcInteract
                       , GHCVM.TypeCheck.TcMatches
                       , GHCVM.TypeCheck.TcMType
                       , GHCVM.TypeCheck.TcPat
                       , GHCVM.TypeCheck.TcPatSyn
                       , GHCVM.TypeCheck.TcPluginM
                       , GHCVM.TypeCheck.TcRnDriver
                       , GHCVM.TypeCheck.TcRnMonad
                       , GHCVM.TypeCheck.TcRnTypes
                       , GHCVM.TypeCheck.TcRules
                       , GHCVM.TypeCheck.TcSimplify
                       , GHCVM.TypeCheck.TcSMonad
                       , GHCVM.TypeCheck.TcSplice
                       , GHCVM.TypeCheck.TcTyClsDecls
                       , GHCVM.TypeCheck.TcTyDecls
                       , GHCVM.TypeCheck.TcType
                       , GHCVM.TypeCheck.TcTypeNats
                       , GHCVM.TypeCheck.TcUnify
                       , GHCVM.TypeCheck.TcValidity
                       , GHCVM.Types.Class
                       , GHCVM.Types.CoAxiom
                       , GHCVM.Types.Coercion
                       , GHCVM.Types.FamInstEnv
                       , GHCVM.Types.InstEnv
                       , GHCVM.Types.Kind
                       , GHCVM.Types.OptCoercion
                       , GHCVM.Types.TyCon
                       , GHCVM.Types.Type
                       , GHCVM.Types.TypeRep
                       , GHCVM.Types.Unify
                       , GHCVM.Utils.Bag
                       , GHCVM.Utils.Binary
                       , GHCVM.Utils.BooleanFormula
                       , GHCVM.Utils.BufWrite
                       , GHCVM.Utils.Digraph
                       , GHCVM.Utils.Encoding
                       , GHCVM.Utils.Exception
                       , GHCVM.Utils.ExtsCompat46
                       , GHCVM.Utils.FastBool
                       , GHCVM.Utils.FastFunctions
                       , GHCVM.Utils.FastMutInt
                       , GHCVM.Utils.FastString
                       , GHCVM.Utils.FastTypes
                       , GHCVM.Utils.Fingerprint
                       , GHCVM.Utils.FiniteMap
                       , GHCVM.Utils.GraphBase
                       , GHCVM.Utils.GraphColor
                       , GHCVM.Utils.GraphOps
                       , GHCVM.Utils.GraphPpr
                       , GHCVM.Utils.IOEnv
                       , GHCVM.Utils.ListSetOps
                       , GHCVM.Utils.Maybes
                       , GHCVM.Utils.MonadUtils
                       , GHCVM.Utils.OrdList
                       , GHCVM.Utils.Outputable
                       , GHCVM.Utils.Pair
                       , GHCVM.Utils.Panic
                       , GHCVM.Utils.Platform
                       , GHCVM.Utils.Pretty
                       , GHCVM.Utils.Serialized
                       , GHCVM.Utils.State
                       , GHCVM.Utils.Stream
                       , GHCVM.Utils.StringBuffer
                       , GHCVM.Utils.UniqFM
                       , GHCVM.Utils.UniqSet
                       , GHCVM.Utils.UnVarGraph
                       , GHCVM.Utils.Util
                       , GHCVM.Debug
                       , GHCVM.Util
                       , GHCVM.JAR
    other-modules:       GHCVM.Parser.Parser
                       , GHCVM.Parser.Lexer
                       , GHCVM.Parser.RdrHsSyn
    build-depends:       base >= 4.7 && < 5
                       , bytestring
                       , text
                       , bin-package-db
                       , time       >= 1.4 && < 1.7
                       , process    >= 1   && < 1.3
                       , directory >= 1.2
                       , filepath
                       , codec-jvm >= 0
                       , control-monad-exception >= 0.11
                       , hpc
                       , mtl
                       , zip
                       , path
                       , exceptions
                       , transformers
                       , array
                       , containers

    if os(windows)
        build-depends:   Win32
    else
        build-depends:   unix
    hs-source-dirs:      compiler
    include-dirs:        include
    install-includes:    HsVersions.h Bytecodes.h
    exposed:             True
    buildable:           True
    build-tools:         alex
                       , happy

executable ghcvm
    ghc-options:         -Wall
    hs-source-dirs:      ghcvm
    main-is:             Main.hs
    default-language:    Haskell2010
    other-modules:       GhciMonad
                         GhciTags
                         InteractiveUI
    build-depends:       array
                       , base >= 4.7 && < 5
                       , bytestring
                       , deepseq
                       , directory
                       , filepath
                       , ghc >= 7.10.3 && < 7.11.0
                       , ghc-paths == 0.1.0.9
                       , haskeline
                       , process
                       , transformers
                       , ghcvm

    if os(windows)
        build-depends:   Win32
    else
        build-depends:   unix


executable ghcvm-build
    hs-source-dirs:      shake
    main-is:             Build.hs
    default-language:    Haskell2010
    build-depends:       base >= 4.7 && < 5
                       , shake
                       , directory
                       , Cabal
                       , containers >= 0.5
