name:                eta-lsp
-- @VERSION_CHANGE@
-- @BUILD_NUMBER@
version:             0.8.0.3
description:         Language Server for Eta
license:             BSD3
license-file:        LICENSE
author:              Rahul Muttineni, Jyothsna Patnam
maintainer:          Rahul Muttineni <rahulmutt@gmail.com>, Jyothsna Patnam <jyothsnasrinivas17@gmail.com>
copyright:           Copyright (c) Rahul Muttineni 2018, Jyothsna Patnam 2018
stability:           Experimental
build-type:          Simple
cabal-version:       >=1.10

source-repository head
  type: git
  location: https://github.com/typelead/eta.git

library
   ghc-options:         -Wall -Werror
   hs-source-dirs:      src
   exposed-modules:     Language.Eta.IDE.Options
                        Language.Eta.IDE.Run
                        Language.Eta.IDE.Types
   default-language:    Haskell2010
   build-depends:       base >= 4.7 && < 5
                      , haskell-lsp
                      , optparse-applicative
                      , eta

executable eta-lsp
   ghc-options:         -Wall -Werror -threaded -rtsopts
   hs-source-dirs:      app
   main-is:             Main.hs
   default-language:    Haskell2010
   build-depends:       base >= 4.7 && < 5
                      , eta-lsp
                      , optparse-applicative
