name:                eta-build
-- @VERSION_CHANGE@
version:             0.7.1
description:         Build script for the Eta compiler & associated tools
license:             BSD3
license-file:        LICENSE
author:              Rahul Muttineni
maintainer:          Rahul Muttineni <rahulmutt@gmail.com>
copyright:           Copyright (c) Rahul Muttineni 2017
stability:           Experimental
build-type:          Simple
cabal-version:       >=1.10

executable eta-build
    main-is:             Build.hs
    default-language:    Haskell2010
    ghc-options:         -Wall
    build-depends:       base >= 4.7 && < 5
                       , shake
                       , directory
                       , etlas-cabal
                       , containers >= 0.5