name:                eta-build
version:             0.0.0
description:         Build script for the Eta compiler & associated tools
license:             BSD3
license-file:        LICENSE
author:              Rahul Muttineni
maintainer:          Rahul Muttineni <rahulmutt@gmail.com>
copyright:           Copyright (c) Rahul Muttineni 2017
stability:           Experimental
build-type:          Simple
cabal-version:       >=1.10

executable eta-build
    main-is:             Build.hs
    default-language:    Haskell2010
    ghc-options:         -Wall -Werror
    build-depends:       base >= 4.7 && < 5
                       , shake
                       , directory
                       , etlas-cabal
                       , containers >= 0.5