name:           base
version:        4.11.1.0
license:        BSD3
license-file:   LICENSE
maintainer:     libraries@haskell.org
bug-reports:    http://ghc.haskell.org/trac/ghc/newticket?component=libraries/base
synopsis:       Basic libraries
category:       Prelude
description:
    This package contains the "Prelude" and its support libraries,
    and a large collection of useful libraries ranging from data
    structures to parsing combinators and debugging utilities.
cabal-version:  >=1.10
build-type:     Simple

extra-source-files:
    include/CTypes.h
    include/Signal.h

source-repository head
    type:     git
    location: http://git.haskell.org/ghc.git
    subdir:   libraries/base

library
    default-language: Haskell2010
    other-extensions:
        AutoDeriveTypeable
        BangPatterns
        CApiFFI
        CPP
        ConstraintKinds
        DataKinds
        DeriveDataTypeable
        DeriveGeneric
        ExistentialQuantification
        ExplicitForAll
        FlexibleContexts
        FlexibleInstances
        FunctionalDependencies
        GADTs
        GeneralizedNewtypeDeriving
        KindSignatures
        MagicHash
        MultiParamTypeClasses
        NegativeLiterals
        NoImplicitPrelude
        NondecreasingIndentation
        OverloadedStrings
        ParallelArrays
        PolyKinds
        RankNTypes
        RecordWildCards
        RoleAnnotations
        Safe
        ScopedTypeVariables
        StandaloneDeriving
        Trustworthy
        TypeFamilies
        TypeOperators
        TypeSynonymInstances
        UnboxedTuples
        UndecidableInstances
        UnliftedFFITypes
        Unsafe

    build-depends: rts == 0.1.*, ghc-prim == 0.4.*, integer >= 0.5.1
    java-sources: java-utils/Utils.java,java-utils/HSIConv.java,java-utils/StringCAF.java

    exposed-modules:
        Control.Applicative
        Control.Arrow
        Control.Category
        Control.Concurrent
        Control.Concurrent.Chan
        Control.Concurrent.MVar
        Control.Concurrent.QSem
        Control.Concurrent.QSemN
        Control.Exception
        Control.Exception.Base
        Control.Monad
        Control.Monad.Fix
        Control.Monad.IO.Class
        Control.Monad.Fail
        Control.Monad.Instances
        Control.Monad.ST
        Control.Monad.ST.Lazy
        Control.Monad.ST.Lazy.Safe
        Control.Monad.ST.Lazy.Unsafe
        Control.Monad.ST.Safe
        Control.Monad.ST.Strict
        Control.Monad.ST.Unsafe
        Control.Monad.Zip
        Data.Bifoldable
        Data.Bifunctor
        Data.Bitraversable
        Data.Bits
        Data.Bool
        Data.Char
        Data.Coerce
        Data.Complex
        Data.Data
        Data.Dynamic
        Data.Either
        Data.Eq
        Data.Fixed
        Data.Foldable
        Data.Function
        Data.Functor
        Data.Functor.Classes
        Data.Functor.Compose
        Data.Functor.Const
        Data.Functor.Identity
        Data.Functor.Product
        Data.Functor.Sum
        Data.List.NonEmpty
        Data.IORef
        Data.Int
        Data.Ix
        Data.List
        Data.Maybe
        Data.Monoid
        Data.Ord
        Data.Proxy
        Data.Ratio
        Data.Semigroup
        Data.STRef
        Data.STRef.Lazy
        Data.STRef.Strict
        Data.String
        Data.Traversable
        Data.Tuple
        Data.Type.Bool
        Data.Type.Coercion
        Data.Type.Equality
        Data.Typeable
        Data.Typeable.Internal
        Data.Unique
        Data.Version
        Data.Void
        Data.Word
        Debug.Trace
        Eta.Interop
        Eta.RTS
        Foreign
        Foreign.C
        Foreign.C.Error
        Foreign.C.String
        Foreign.C.Types
        Foreign.Concurrent
        Foreign.ForeignPtr
        Foreign.ForeignPtr.Safe
        Foreign.ForeignPtr.Unsafe
        Foreign.Marshal
        Foreign.Marshal.Alloc
        Foreign.Marshal.Array
        Foreign.Marshal.Error
        Foreign.Marshal.Pool
        Foreign.Marshal.Safe
        Foreign.Marshal.Unsafe
        Foreign.Marshal.Utils
        Foreign.Ptr
        Foreign.Safe
        Foreign.StablePtr
        Foreign.Storable
        GHC.Arr
        GHC.Base
        GHC.Char
        GHC.Conc
        GHC.Conc.IO
        GHC.Conc.Signal
        GHC.Conc.Sync
        GHC.ConsoleHandler
        GHC.Constants
        GHC.Desugar
        GHC.Enum
        GHC.Environment
        GHC.Err
        GHC.Exception
        GHC.Exts
        GHC.Fingerprint
        GHC.Fingerprint.Type
        GHC.Float
        GHC.Float.ConversionUtils
        GHC.Float.RealFracMethods
        GHC.Foreign
        GHC.ForeignPtr
        GHC.GHCi
        GHC.Generics
        GHC.IO
        GHC.IO.Buffer
        GHC.IO.BufferedIO
        GHC.IO.Device
        GHC.IO.Encoding
        GHC.IO.Encoding.CodePage
        GHC.IO.Encoding.Failure
        GHC.IO.Encoding.Iconv
        GHC.IO.Encoding.Latin1
        GHC.IO.Encoding.Types
        GHC.IO.Encoding.UTF16
        GHC.IO.Encoding.UTF32
        GHC.IO.Encoding.UTF8
        GHC.IO.Exception
        GHC.IO.FD
        GHC.IO.Handle
        GHC.IO.Handle.FD
        GHC.IO.Handle.Internals
        GHC.IO.Handle.Lock
        GHC.IO.Handle.Text
        GHC.IO.Handle.Types
        GHC.IO.IOMode
        GHC.IO.Unsafe
        GHC.IOArray
        GHC.IORef
        GHC.Int
        GHC.List
        GHC.MVar
        GHC.Maybe
        GHC.Natural
        GHC.Num
        GHC.OldList
        GHC.OverloadedLabels
        GHC.PArr
        GHC.Pack
        GHC.Profiling
        GHC.Ptr
        GHC.Read
        GHC.Real
        GHC.RTS.Flags
        GHC.ST
        GHC.StaticPtr
        GHC.STRef
        GHC.Show
        GHC.Stable
        GHC.Stack
        GHC.Stack.CCS
        GHC.Stack.Types
        GHC.Stats
        GHC.Storable
        GHC.TopHandler
        GHC.TypeLits
        GHC.TypeNats
        GHC.Unicode
        GHC.Weak
        GHC.Word
        Java
        Java.Array
        Java.Core
        Java.Collections
        Java.Concurrent
        Java.Do
        Java.Exception
        Java.Math
        Java.Primitive
        Java.PrimitiveBase
        Java.String
        Java.StringBase
        Java.TopHandler
        Java.Utils
        Java.Wrappers
        Numeric
        Numeric.Natural
        Prelude
        System.CPUTime
        System.Console.GetOpt
        System.Environment
        System.Exit
        System.IO
        System.IO.Error
        System.IO.Unsafe
        System.Info
        System.Mem
        System.Mem.StableName
        System.Mem.Weak
        System.Posix.Internals
        System.Posix.Types
        System.Timeout
        Text.ParserCombinators.ReadP
        Text.ParserCombinators.ReadPrec
        Text.Printf
        Text.Read
        Text.Read.Lex
        Text.Show
        Text.Show.Functions
        Type.Reflection
        Unsafe.Coerce

    other-modules:
        Control.Monad.ST.Imp
        Control.Monad.ST.Lazy.Imp
        Data.Functor.Utils
        Data.Semigroup.Internal
        Data.OldList
        Data.Semigroup.Internal
        Foreign.ForeignPtr.Imp
        System.Environment.ExecutablePath

    include-dirs: include
    install-includes:
      CTypes.h
      Signals.h

    -- We need to set the package key to base (without a version number)
    -- as it's magic.
    ghc-options: -this-unit-id base
