name:           eta-boot
-- @VERSION_CHANGE@
version:        0.7.1
license:        BSD3
license-file:   LICENSE
category:       Boot Library
maintainer:     typeleadhq@gmail.com
bug-reports:    http://github.com/typelead/eta/issues
synopsis:       Shared functionality between Eta and its boot libraries
description:    This library is shared between Eta, eta-pkg, and other boot
                libraries.
                .
                A note about "Eta.PackageDb": it only deals with the subset of
                the package database that the compiler cares about: modules
                paths etc and not package metadata like description, authors
                etc. It is thus not a library interface to eta-pkg and is *not*
                suitable for modifying Eta package databases.
                .
                The package database format and this library are constructed in
                such a way that while eta-pkg depends on Cabal, the Eta library
                and program do not have to depend on Cabal.
cabal-version:  >=1.22
build-type:     Simple

source-repository head
    type:     git
    location: http://github.com/typelead/eta.git
    subdir:   libraries/eta-boot

Library
    default-language: Haskell2010
    other-extensions: DeriveGeneric, RankNTypes, ScopedTypeVariables

    exposed-modules:
            Eta.LanguageExtensions
            Eta.PackageDb
            Eta.Serialized

    build-depends: base       >= 4.7 && < 4.11,
                   binary     == 0.8.*,
                   bytestring == 0.10.*,
                   directory  >= 1.2 && < 1.4,
                   filepath   >= 1.3 && < 1.5,
                   -- @VERSION_CHANGE@
                   eta-boot-th == 0.7.1
