name:           eta-meta
version:        0.7.2.2
-- NOTE: Don't forget to update ./changelog.md
license:        BSD3
license-file:   LICENSE
category:       Template Haskell
maintainer:     typeleadhq@gmail.com
bug-reports:    http://github.com/typelead/eta/issues
synopsis:       Support library for Template Haskell
build-type:     Simple
cabal-version:  >= 1.10
description:
    This package provides modules containing facilities for manipulating
    Eta source code using Template Haskell.

extra-source-files: changelog.md

library
    default-language: Haskell2010
    other-extensions:
        BangPatterns
        CPP
        DefaultSignatures
        DeriveDataTypeable
        DeriveGeneric
        FlexibleInstances
        RankNTypes
        RoleAnnotations
        ScopedTypeVariables

    exposed-modules:
        Language.Eta.Meta
        Language.Eta.Meta.Lib
        Language.Eta.Meta.Ppr
        Language.Eta.Meta.PprLib
        Language.Eta.Meta.Quote
        Language.Eta.Meta.Syntax
        Language.Eta.Meta.LanguageExtensions

    other-modules:
        Language.Eta.Meta.Lib.Map

    build-depends:
        base        >= 4.7 && < 4.10,
        eta-boot-th,
        pretty      == 1.1.*

    -- We need to set the unit ID to eta-meta (without a
    -- version number) as it's magic.
    ghc-options: -Wall
    if impl(eta)
      ghc-options: -this-unit-id eta-meta
